--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.2",
     "easyinvoice": "^2.3.0",
     "express": "~4.16.1",
     "express-fileupload": "^1.3.1",
